--- a/_data/tool_links.yml
+++ b/_data/tool_links.yml
@@ -133,7 +133,7 @@
 
     - name: 书语者
       style: basic
-      url: https://www.shuyuzhe.com/
+      url: https://book.shuyuzhe.com/
 
     - name: 鸠摩搜书
       style: basic
