--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -131,6 +131,10 @@
       style: blue
       url: http://www.zhihu.com/
 
+    - name: 即刻
+      style: basic
+      url: https://web.okjike.com
+
     - name: 长毛象中文站
       style: basic
       url: https://cmx.im/
