--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -106,11 +106,6 @@
       style: basic
       url: http://wx.qq.com/
 
-    - name: 微信公众平台
-      icon: wechat green
-      style: basic
-      url: https://mp.weixin.qq.com
-
     - name: V2EX
       style: basic
       url: https://www.v2ex.com/
@@ -135,6 +130,10 @@
       style: basic
       url: https://cmx.im/
 
+    - name: 掘金
+      style: basic
+      url: https://juejin.im/
+
     - name: Medium
       style: blue
       url: https://medium.com/
@@ -146,6 +145,10 @@
     - name: reddit
       style: basic
       url: https://www.reddit.com/
+
+    - name: telegram
+      style: basic
+      url: https://web.telegram.org/#/im
 
 
   - category: 学习
@@ -194,10 +197,6 @@
     - name: 伯乐在线
       style: basic
       url: http://web.jobbole.com/
-
-    - name: 掘金
-      style: basic
-      url: https://juejin.im/
 
 
 
