--- a/_data/home_links.yml
+++ b/_data/home_links.yml
@@ -93,6 +93,10 @@
       style: green
       url: http://md.aclickall.com/
 
+    - name: MikuTools
+      style: basic
+      url: https://miku.tools/
+
 
   - category: 社交
     links:
