--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ logo: /images/favicon.ico
 # Baidu Analytics
 ba_track_id: ce472038c53a64826054bafc870d2d24
 # Google Analytics
-ga_track_id: 'UA-96564187-1'
-ga_domain: acusp.info
+ga_track_id: 'UA-96564187-3'
+ga_domain: navi.acusp.info
 
 
 plugins:
